# EmbeddedMQ

./: .gitignore  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md
.github/workflows/: ci.yml  nightly.yml  pages.yml  release-bindings.yml
bench/: CMakeLists.txt  bench_fanout.c  bench_load.c  bench_metrics.c  bench_metrics.h
bench/compare/: bench_compare.c
bindings/: README.md
bindings/conformance/: README.md  validate_corpus.py
bindings/go/: README.md  emq.go  go.mod  zz_api_emq.c  zz_core_emq_alloc.c  zz_core_emq_bitmap.c  zz_core_emq_compress.c  zz_core_emq_cpu.c  zz_core_emq_crc.c  zz_core_emq_domain.c  zz_core_emq_ebr.c  zz_core_emq_fault.c  zz_core_emq_hist.c  zz_core_emq_lfq.c  zz_core_emq_log.c  zz_core_emq_pool.c  zz_core_emq_record.c  zz_core_emq_stats_ex.c  zz_core_emq_task.c  zz_engine_emq_engine.c  zz_engine_emq_eventloop.c  zz_engine_emq_mpmc.c  zz_platform_emq_platform.c  zz_policy_emq_policy.c  zz_primitives_emq_delay.c  zz_primitives_emq_dispatch.c  zz_primitives_emq_fifo.c  zz_primitives_emq_priority.c  zz_primitives_emq_pubsub.c  zz_primitives_emq_ring.c  zz_primitives_emq_stream.c  zz_primitives_emq_workqueue.c  zz_registry_emq_registry.c  zz_routing_emq_routing.c  zz_sched_emq_sched.c  zz_sched_emq_wheel.c
bindings/java/: README.md  pom.xml  run-loadtest.sh
bindings/native/: CMakeLists.txt  README.md
bindings/python/: MANIFEST.in  README.md  pyproject.toml  setup.py
bindings/python/native/: CMakeLists.txt  sources.txt
bindings/python/native/src/api/: emq.c
bindings/python/native/src/core/: emq_alloc.c  emq_crc.c  emq_domain.h  emq_log.c  emq_record.h
bindings/python/native/src/engine/: emq_eventloop.c  emq_mpmc.h
bindings/python/native/src/platform/: emq_platform.c
bindings/python/native/src/primitives/: emq_dispatch.c  emq_fifo.c  emq_primitives.h
bindings/python/native/src/sched/: emq_wheel.c
bindings/python/src/embeddedmq/: __init__.py  _emq.c
bindings/rust/: Cargo.toml  README.md
bindings/rust/emq/: Cargo.toml  README.md
bindings/rust/emq-sys/: Cargo.toml  README.md  build.rs
bindings/rust/emq-sys/native/: CMakeLists.txt  emq_amalgamation.c
bindings/rust/emq-sys/native/include/emq/: emq_export.h
bindings/rust/emq-sys/native/src/core/: emq_compress.c  emq_cpu.c  emq_ebr.c  emq_hot.h  emq_lfq.c  emq_mem.h
bindings/rust/emq-sys/native/src/primitives/: emq_fifo.c  emq_ring.c
bindings/rust/emq-sys/native/src/registry/: emq_registry.h
bindings/rust/emq-sys/src/: lib.rs
bindings/rust/emq/src/: lib.rs
cmake/: sanitizers.cmake  tsan_suppressions.txt
core/: CMakeLists.txt
core/bench/: CMakeLists.txt  bench_latency.c  bench_sched.c
core/bench/baselines/: windows-x64.csv
core/cmake/: compiler-warnings.cmake  emq.def  emq.pc.in
core/difftest/: CMakeLists.txt  diff_model.c
core/examples/: CMakeLists.txt  producer_consumer.c  pubsub_demo.c
core/fault/: CMakeLists.txt
core/fuzz/: fuzz_log.c
core/include/emq/: emq.h  emq_testcase.h  emq_types.h
core/model/: model_workqueue.c
core/recovery/: CMakeLists.txt  recovery_supervisor.c  recovery_writer.c
core/soak/: CMakeLists.txt  soak_runner.c
core/src/core/: emq_alloc.h  emq_atomic.h  emq_bitmap.h  emq_compress.h  emq_cpu.h  emq_crc.h  emq_ebr.h  emq_hist.h  emq_log.h  emq_pool.c  emq_pool.h  emq_record.c  emq_stats_ex.h  emq_task.c
core/src/engine/: emq_eventloop.h
core/src/platform/: emq_platform.h
core/src/policy/: emq_policy.h
core/src/primitives/: emq_delay.c  emq_primitives.h  emq_priority.c  emq_pubsub.c  emq_stream.c  emq_workqueue.c
core/src/registry/: emq_registry.c
core/src/sched/: emq_sched.c  emq_wheel.h
core/stress/: stress_compact.c  stress_spsc.c
core/tests/: CMakeLists.txt  gen_fixture.c  test_abi.c  test_alloc.c  test_api.c  test_backpressure.c  test_batch_async.c  test_boundary_matrix.c  test_claim.c  test_compat.c  test_fifo.c  test_hist.c  test_lfq.c  test_policies.c  test_pool.c  test_pop_into.c  test_record_v3.c  test_routing.c  test_routing_advanced.c  test_task.c  test_wheel.c
core/tests/fixtures/log_v1/: log.seg
core/testsupport/: CMakeLists.txt  emq_testsupport.c  emq_testsupport.h
difftest/: CMakeLists.txt  diff_model.h  diff_runner.c
docs/: DISTRIBUTION.md  MEMORY_ORDERING.md  PUBLISHING.md  RELEASE_CHECKLIST.md  TESTING.md  TESTS.md  WHERE_WE_WIN.md  getting-started.md  overview.md
examples/java-central-smoke/: README.md  pom.xml
examples/loadtest/: README.md  RELEASE_GATES.md  results.md  results.txt  run-all.ps1  run-all.sh
examples/python-pypi-smoke/: smoke.py
examples/rust-crates-smoke/: Cargo.toml  run-smoke.sh
fault/: fault_alloc.c  fault_corrupt.c  fault_disk.c
fuzz/: CMakeLists.txt  fuzz_ops.c
include/emq/: emq.h  emq_types.h
model/: CMakeLists.txt
recovery/: CMakeLists.txt
scripts/: perf_check.ps1  run_all.ps1  sanitize.ps1  smoke_bindings.sh  soak.ps1  stress_long.ps1  sync_native.py
site/: README.md  index.html  main.js  styles.css
soak/: soak_runner.c
src/api/: emq.c
src/core/: emq_atomic.h  emq_cpu.c  emq_crc.c  emq_fault.c  emq_hist.c  emq_hist.h  emq_hot.h  emq_lfq.c  emq_lfq.h  emq_stats_ex.c
src/engine/: emq_engine.c  emq_engine.h  emq_mpmc.c
src/platform/: emq_platform.c
src/policy/: emq_policy.c
stress/: CMakeLists.txt  stress_churn.c  stress_mpmc.c  stress_replay.c  stress_spsc.c
tests/: CMakeLists.txt  emq_test.h  gen_fixture.c  test_abi.c  test_bitmap.c  test_compat.c  test_cpu.c  test_crc.c  test_durable.c  test_ebr.c  test_hist.c  test_mpmc.c  test_policy.c  test_record.c  test_registry.c  test_sched.c  test_workqueue.c
testsupport/: CMakeLists.txt  emq_testsupport.c  emq_testsupport.h
transport/: CMakeLists.txt  README.md
transport/ipc/: CMakeLists.txt  THREAT_MODEL.md
transport/ipc/include/: emq_ipc.h
transport/ipc/src/: emq_ipc.c
transport/ipc/tests/: test_ipc.c
transport/net/: CMakeLists.txt
transport/net/backends/: README.md
transport/net/include/: emq_net.h
transport/net/model/: nak_flow.tla
transport/net/src/: emq_net_driver.c  emq_net_proto.h  emq_net_socket.c
transport/net/tests/: test_net_loopback.c
(+45 files in other folders)
