add_library(emq_test_harness INTERFACE)
target_include_directories(emq_test_harness INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

function(emq_add_test name src)
  add_executable(${name} ${src})
  target_link_libraries(${name} PRIVATE emq emq_test_harness)
  target_include_directories(${name} PRIVATE ${EMQ_CORE_DIR}/src)
  emq_apply_warnings(${name})
  add_test(NAME ${name} COMMAND ${name})
endfunction()

emq_add_test(test_crc test_crc.c)
emq_add_test(test_alloc test_alloc.c)
emq_add_test(test_record test_record.c)
emq_add_test(test_fifo test_fifo.c)
emq_add_test(test_wheel test_wheel.c)
emq_add_test(test_routing test_routing.c)
emq_add_test(test_workqueue test_workqueue.c)
emq_add_test(test_registry test_registry.c)
emq_add_test(test_api test_api.c)
emq_add_test(test_durable test_durable.c)
emq_add_test(test_policies test_policies.c)
emq_add_test(test_routing_advanced test_routing_advanced.c)
emq_add_test(test_mpmc test_mpmc.c)
emq_add_test(test_batch_async test_batch_async.c)
emq_add_test(test_pool test_pool.c)
emq_add_test(test_bitmap test_bitmap.c)
emq_add_test(test_lfq test_lfq.c)
emq_add_test(test_ebr test_ebr.c)
emq_add_test(test_sched test_sched.c)
emq_add_test(test_policy test_policy.c)
emq_add_test(test_record_v3 test_record_v3.c)
emq_add_test(test_cpu test_cpu.c)
emq_add_test(test_hist test_hist.c)
emq_add_test(test_task test_task.c)
emq_add_test(test_backpressure test_backpressure.c)
emq_add_test(test_abi test_abi.c)
emq_add_test(test_compat test_compat.c)
emq_add_test(test_boundary_matrix test_boundary_matrix.c)
emq_add_test(test_claim test_claim.c)
target_link_libraries(test_compat PRIVATE emq_testsupport)
target_include_directories(test_compat PRIVATE ${EMQ_CORE_DIR}/testsupport)

add_executable(gen_fixture gen_fixture.c)
target_link_libraries(gen_fixture PRIVATE emq emq_testsupport)
target_include_directories(gen_fixture PRIVATE
  ${EMQ_CORE_DIR}/src
  ${EMQ_CORE_DIR}/include
  ${EMQ_CORE_DIR}/testsupport)
emq_apply_warnings(gen_fixture)
if(WIN32)
  target_compile_definitions(gen_fixture PRIVATE _CRT_SECURE_NO_WARNINGS)
endif()
