[package]
name = "emq-sys"
version = "1.0.0-beta.1"
edition = "2021"
description = "Raw FFI bindings to EmbeddedMQ (bundles C sources by default)"
license = "MIT"
repository = "https://github.com/A-G-U-P-T-A/EmbeddedMQ"
homepage = "https://a-g-u-p-t-a.github.io/EmbeddedMQ/"
documentation = "https://docs.rs/emq-sys"
readme = "README.md"
keywords = ["embeddedmq", "queue", "messaging", "ffi"]
categories = ["api-bindings", "concurrency"]
links = "emq"
include = [
  "src/**",
  "native/**",
  "build.rs",
  "Cargo.toml",
  "README.md",
]

[features]
default = ["bundled"]
bundled = []
system = []

[build-dependencies]
cc = "1.1"
