[package]
name = "emq"
version = "1.0.0-beta.1"
edition = "2021"
description = "Safe Rust bindings for EmbeddedMQ"
license = "MIT"
repository = "https://github.com/A-G-U-P-T-A/EmbeddedMQ"
homepage = "https://a-g-u-p-t-a.github.io/EmbeddedMQ/"
documentation = "https://docs.rs/emq"
readme = "README.md"
keywords = ["embeddedmq", "queue", "messaging"]
categories = ["concurrency", "api-bindings"]

[dependencies]
emq-sys = { version = "1.0.0-beta.1", path = "../emq-sys" }
